@@ -186,8 +186,8 @@ openbook_SOURCES = \
 	ofa-ledger-page.h									\
 	ofa-ledger-properties.c								\
 	ofa-ledger-properties.h								\
-	ofa-ledger-summary-bin.c							\
-	ofa-ledger-summary-bin.h							\
+	ofa-ledger-summary-args.c							\
+	ofa-ledger-summary-args.h							\
 	ofa-ledger-summary-render.c							\
 	ofa-ledger-summary-render.h							\
 	ofa-ledger-treeview.c								\
