@@ -31,7 +31,7 @@
     <file>ofa-ledger-book-args.ui</file>
     <file>ofa-ledger-close.ui</file>
     <file>ofa-ledger-properties.ui</file>
-    <file>ofa-ledger-summary-bin.ui</file>
+    <file>ofa-ledger-summary-args.ui</file>
     <file>ofa-misc-audit-ui.ui</file>
     <file>ofa-misc-collector-ui.ui</file>
     <file>ofa-period-close.ui</file>
